Wed Mar  2 2005  Joe Allen <jhallen@world.std.com>

	Fix pointer leak.

Wed Mar  2 2005  Joe Allen <jhallen@world.std.com>

	Fix warnings from various syntax files (can't
	believe I didn't notice this...)

	Add -menu_jump option

Tue Mar  1 2005  Joe Allen <jhallen@world.std.com>

	Allow :s in xml names.
	Fix 'keymap' command.
	Add 'name' command.

Mon Feb 28 2005  Joe Allen <jhallen@world.std.com>

	User defined text delimiters
	XML delimiter matching

Sun Feb 27 2005  Joe Allen <jhallen@world.std.com>

	Fix lockup problem from Ctrl-G
	Fix bugs with new 'if' command.

Sun Feb 27 2005  Joe Allen <jhallen@world.std.com>

	Added Jesse McGrew's xterm mouse and macro enhancements:
		added to math: %, ==, !=, >, >=, <, <= operators,
		plus 'char' is ascii value of character under cursor.

		added functions: if, then, elsif, endif

	Needs work:
		'if' crashes.
		xterm selections don't paste into other windows.

Sat Feb 26 2005  Joe Allen <jhallen@world.std.com>

	Tab complete for ^K ; (tags search).

Sat Feb 26 2005  Joe Allen <jhallen@world.std.com>

	Allow '-' in file names in compiler error parser.

Sat Feb 26 2005  Joe Allen <jhallen@world.std.com>

	Accept patch from Kalan (thearinkalen at users.sourceforge.net)
	which makes save block prompt if a file is to be overwritten.

	Accept patch from sth2000 at users.sourceforge.net which improves
	wordwrap when overtype mode is enabled.

Fri Feb 25 2005  Joe Allen <jhallen@world.std.com>

	Fix bash highlighter bug: $"  " and $'  ' are strings.
	Ctrl-G starts a search if it doesn't know word under cursor.

Sun Feb 20 2005  Joe Allen <jhallen@world.std.com>

	Fix perl highlighter bug: \"fdfdg" is a string.

Sun Feb 20 2005  Joe Allen <jhallen@world.std.com>

	Greatly enhanced ^G (goto matching delimiter) so that it understands
	quoting and comments and can operate on word delimiters
	(begin...end).

Sun Feb 20 2005  Joe Allen <jhallen@world.std.com>

	Fix perl highlighter bug: words ending in q
	got confused with 'q'.
