@@ -97,6 +97,8 @@
 
  -joe_state     Use ~/.joe_state file
 
+ -mouse		Enable mouse support
+ -joexterm	If you are using Joe's modified Xterm, which makes -mouse
  -rmsg defines the right-justified string.  The first character of -rmsg is
  the background fill character.  The following escape sequences can be used
  in these strings:
