@@ -478,13 +478,13 @@ void save_yank(FILE *f)
 void load_yank(FILE *f)
 {
 	UNDOREC *rec;
-	unsigned char buf[4096];
-	unsigned char bf[4096];
-	while(fgets(buf,4095,f) && strcmp(buf,"done\n")) {
+	unsigned char buf[SMALL*4+80];
+	unsigned char bf[SMALL+1];
+	while(fgets(buf,sizeof(buf)-1,f) && strcmp(buf,"done\n")) {
 		unsigned char *p = buf;
 		int len;
 		parse_ws(&p,'#');
-		len = parse_hdlc(&p,bf,4095);
+		len = parse_hdlc(&p,bf,sizeof(bf)-1);
 		if (len>0 && len<=SMALL) {
 			rec = alrec();
 			rec->small = (unsigned char *) joe_malloc(len);
