@@ -1,6 +1,8 @@
 Wed Mar  2 2005  Joe Allen <jhallen@world.std.com>
 
 	Fix pointer leak.
+	Make option to enable mouse support
+	Change .joe_state file to use \ for escape
 
 Wed Mar  2 2005  Joe Allen <jhallen@world.std.com>
 
